Starting work for texturing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 
 find_package(glfw3 REQUIRED)
 
-include_directories(external/glad/include external)
+include_directories(external/glad/include external src)
 
 add_executable(blockgame src/main.cpp external/glad/src/gl.c
         src/common.h
@@ -27,6 +27,9 @@ add_executable(blockgame src/main.cpp external/glad/src/gl.c
         src/game/chunk.cpp
         src/game/chunk.h
         src/game/world.cpp
-        src/game/world.h)
+        src/game/world.h
+        src/gl/texture.cpp
+        src/gl/texture.h
+)
 
 target_link_libraries(blockgame glfw)
